@@ -72,7 +72,7 @@
  *
  *	from ex_vis.h	7.4 (Berkeley) 5/31/85
  *
- *	@(#)ex_vis.h	1.18 (gritter) 3/24/05
+ *	Sccsid @(#)ex_vis.h	1.20 (gritter) 8/4/05
  */
 
 /*
@@ -98,6 +98,13 @@ var enum {
 	ONEOPEN		= 2,
 	HARDOPEN	= 3
 } bastate, state;
+
+/*
+ * Maximum screen size in visual mode, dynamically set as needed.
+ */
+var	short	TUBELINES;
+var	short	TUBECOLS;
+var	short	TUBESIZE;
 
 /*
  * The screen in visual and crtopen is of varying size; the basic
@@ -140,7 +147,7 @@ struct vlinfo {
 	short	vdepth;		/* Depth of displayed line */ /*mjm: was char */
 	short	vflags;		/* Is line potentially dirty ? */
 };
-var	struct vlinfo  vlinfo[TUBELINES + 2];
+var	struct vlinfo  *vlinfo;
 
 #define	DEPTH(c)	(vlinfo[c].vdepth)
 #define	LINE(c)		(vlinfo[c].vliny)
@@ -170,7 +177,7 @@ var	short	vcnt;
  * data itself.  It is also rearranged during insert mode across line
  * boundaries to make incore work easier.
  */
-var	cell	*vtube[TUBELINES];
+var	cell	**vtube;
 var	cell	*vtube0;
 
 /*
