@@ -1,3 +1,8 @@
+Release ...
+* The screen buffers for visual mode are now dynamically allocated, so
+  vi usually does not return to ex mode with "screen too large" when the
+  terminal is resized on a large monitor anymore.
+
 Release 3/25/05
 * vi no longer dies with a segmentation fault if a line does not fit on the
   screen after an insertion.
